fixed spacing issues in final build display, updated final stat display to have text and stats in line, and font family

--- a/src/App.css
+++ b/src/App.css
@@ -122,10 +122,10 @@ body {
 }
 
 .line {
-  width: 75%;
   height: 1px;
   background-color: var(--light);
   margin: 0;
+  justify-content: center;
 }
 
 .eldenBackground {
@@ -273,16 +273,17 @@ body {
   background: #00373d;
 }
 
-#finalSwordAndArmourGroup {
+#finalWeaponAndArmourGroup {
   display: flex;
 }
 
-.equipmentBox {
+.finalEquipmentContainer {
   background: linear-gradient(180deg, #001401 0%, #00373d 143.88%);
   color: white;
   display: flex;
   justify-content: space-between;
   overflow: auto;
+  font-family: signika;
 
   margin: 1vh;
   padding: 5vh;
@@ -296,7 +297,13 @@ body {
   align-items: center;
 
   font-family: "Signika";
-  font-size: 2.5vh;
+  font-size: 3vh;
+}
+
+#finalArmourContainer {
+  display: flex;
+  justify-content: space-between;
+  width: 70%;
 }
 
 .equipmentImage {
@@ -308,13 +315,34 @@ body {
   margin: 2vh;
 }
 
+/* .armourImage {
+margin-left: 6vh;
+margin-right: 6vh;
+} */
+
 #finalPhysickAndStatsGroup {
   display: flex;
 }
 
-#finalPhysickGroup {
+#finalPhysickContainer {
   display: flex;
+  width: 80vh;
+}
+
+#finalStatsContainer {
+  flex: start;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 50%
 }
 
 #finalBuildStats {
+  font-family: Cormorant Garamond;
+  font-weight: bold;
+  font-size: 3.5vh;
+}
+
+.statColumn {
+  margin-left: 0;
+  margin-right: 5vh;
 }
